--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="http://nbrylev.github.io/favicon.jpg">
     <link rel="stylesheet" href="styles.css">
-    <title>nbrylev</title>
+    <title>nbrylev Homepage</title>
+    <meta name="description" content="Work in progress still. Nothing new. Glad to see you here.">
+    <meta property="og:title" content="nbrylev Homepage">
+    <meta property="description" content="Work in progress still. Nothing new. Glad to see you here.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://nbrylev.github.io">
+    <meta property="og:image" content="http://nbrylev.github.io/play-katboard.jpg">
 </head>
 <body>
     <div class="work-in-progress">
