Returned lost og:description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>nbrylev Homepage</title>
     <meta name="description" content="Work in progress still. Nothing new. Glad to see you here.">
     <meta property="og:title" content="nbrylev Homepage">
-    <meta property="description" content="Work in progress still. Nothing new. Glad to see you here.">
+    <meta property="og:description" content="Work in progress still. Nothing new. Glad to see you here.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://nbrylev.github.io">
     <meta property="og:image" content="http://nbrylev.github.io/play-katboard.jpg">
