--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/png" href="http://nbrylev.github.io/favicon.jpg">
+    <link rel="icon" type="image/png" href="favicon.jpg">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <title>nbrylev Homepage</title>
@@ -14,7 +14,8 @@
     <meta property="og:description" content="Work in progress still. Nothing new. Glad to see you here.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://nbrylev.github.io">
-    <meta property="og:image" content="http://nbrylev.github.io/play-katboard.jpg">
+    <meta property="og:image" content="http://nbrylev.github.io/main-character.jpg">
+    <meta property="og:image" content="http://nbrylev.github.io/main-photo.jpg">
 </head>
 <body>
     <div class="work-in-progress">
