Added fun-toggler; Update from CRLF to LF

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
     <meta property="og:image" content="http://nbrylev.github.io/main-photo.jpg">
 </head>
 <body>
-    <div class="work-in-progress">
-        <span class="work-in-progress__title">Work in<br>progress</span>
-        <span class="work-in-progress__spinner">N</span>
+    <input type="checkbox" class="fun-toggler">
+    <div class="content">
+        <div class="work-in-progress">
+            <span class="work-in-progress__title">Work in<br>progress</span>
+            <span class="work-in-progress__spinner">N</span>
+        </div>
     </div>
 </body>
 </html>
