--- a/index.html
+++ b/index.html
@@ -1,49 +1,55 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-    <!-- That's pretty crazy: ON -->
-    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <!-- That's pretty crazy: OFF -->
+  <!-- That's pretty crazy: ON -->
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <!-- That's pretty crazy: OFF -->
 
-    <link rel="stylesheet" href="styles.css">
-    <title>nbrylev Homepage</title>
-    <meta name="description" content="Work in progress still. Nothing new. Glad to see you here.">
-    <meta property="og:title" content="nbrylev Homepage">
-    <meta property="og:description" content="Work in progress still. Nothing new. Glad to see you here.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="http://nbrylev.github.io">
-    <meta property="og:image" content="http://nbrylev.github.io/main-character.jpg">
-    <meta property="og:image" content="http://nbrylev.github.io/main-photo.jpg">
+  <link rel="stylesheet" href="styles.css">
+  <title>nbrylev Homepage</title>
+  <meta name="description" content="Work in progress still. Nothing new. Glad to see you here.">
+  <meta property="og:title" content="nbrylev Homepage">
+  <meta property="og:description" content="Work in progress still. Nothing new. Glad to see you here.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://nbrylev.github.io">
+  <meta property="og:image" content="http://nbrylev.github.io/main-character.jpg">
+  <meta property="og:image" content="http://nbrylev.github.io/main-photo.jpg">
 </head>
 <body>
-    <input type="checkbox" class="fun-toggler">
-    <div class="content">
-        <div class="work-in-progress">
-            <span class="work-in-progress__title">Work in<br>progress</span>
-            <span class="work-in-progress__spinner">N</span>
-        </div>
+  <input type="checkbox"
+         class="fun-toggler">
+  <div class="content">
+    <div class="work-in-progress">
+      <span class="work-in-progress__title">Work in<br>progress</span>
+      <span class="work-in-progress__spinner">N</span>
     </div>
+  </div>
+  <div class="projects">
+    <span class="projects__label">Some projects</span>
+    <a class="project"
+       href="./projects/username-generator"
+       target="_blank">username-generator</a>
+  </div>
 </body>
 </html>
