Added Homepages wrapper

--- a/index.html
+++ b/index.html
@@ -46,10 +46,21 @@
     </div>
   </div>
   <div class="projects">
-    <span class="projects__label">Some projects</span>
-    <a class="project"
-       href="./projects/username-generator"
-       target="_blank">username-generator</a>
+    <div class="projects__section">
+      <span class="projects__label">Repositories</span>
+      <a class="project"
+         href="./projects/username-generator"
+         target="_blank">username-generator</a>
+    </div>
+    <div class="projects__section">
+      <span class="projects__label">Previous homepages</span>
+      <a class="project"
+         href="./homepages/xxxx2016"
+         target="_blank">xxxx2016</a>
+      <a class="project"
+         href="./homepages/xxxx2017"
+         target="_blank">xxxx2017</a>
+    </div>
   </div>
 </body>
 </html>
