--- a/projects/username-generator/index.html
+++ b/projects/username-generator/index.html
@@ -5,15 +5,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
-  <script type="application/javascript" src="js/username-generator.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      new window.UsernameGenerator();
-    });
-  </script>
-  <title>Username Generator</title>
+  <script type="application/javascript" src="app.js"></script>
+  <title>Username Generator [by nbrylev@github.com]</title>
 </head>
 <body>
   <div class="app">
