--- a/index.html
+++ b/index.html
@@ -1,66 +1,106 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
 
   <!-- That's pretty crazy: ON -->
-  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="./favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="msapplication-TileImage" content="./favicon/ms-icon-144x144.png">
   <!-- That's pretty crazy: OFF -->
 
-  <link rel="stylesheet" href="styles.css">
+  <meta name="theme-color" content="#ffffff">
+
+  <link rel="stylesheet" href="./style.css">
   <title>nbrylev Homepage</title>
   <meta name="description" content="Work in progress still. Nothing new. Glad to see you here.">
   <meta property="og:title" content="nbrylev Homepage">
   <meta property="og:description" content="Work in progress still. Nothing new. Glad to see you here.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="http://nbrylev.github.io">
-  <meta property="og:image" content="http://nbrylev.github.io/main-character.jpg">
-  <meta property="og:image" content="http://nbrylev.github.io/main-photo.jpg">
+  <meta property="og:url" content="http://nbrylevv.github.io">
+  <meta property="og:image" content="http://nbrylevv.github.io/main-character.jpg">
+  <meta property="og:image" content="http://nbrylevv.github.io/main-photo.jpg">
 </head>
 <body>
-  <input type="checkbox"
-         class="fun-toggler">
-  <div class="content">
-    <div class="work-in-progress">
-      <span class="work-in-progress__title">Work in<br>progress</span>
-      <span class="work-in-progress__spinner">N</span>
-    </div>
-  </div>
-  <div class="projects">
-    <div class="projects__section">
-      <span class="projects__label">Repositories</span>
-      <a class="project"
-         href="./projects/username-generator"
-         target="_blank">username-generator</a>
-    </div>
-    <div class="projects__section">
-      <span class="projects__label">Previous homepages</span>
-      <a class="project"
-         href="./homepages/xxxx2016"
-         target="_blank">xxxx2016</a>
-      <a class="project"
-         href="./homepages/xxxx2017"
-         target="_blank">xxxx2017</a>
-    </div>
+  <div class="homepage">
+    <h1 class="title homepage__title">CV</h1>
+    <section class="homepage__section cv">
+      <section class="cv__section personal-info">
+        <div class="personal-info__main">
+          <img src="main-character.jpg" alt="Nikita Brylev" class="personal-info__photo">
+          <span class="personal-info__name">Nikita Brylev</span>
+          <span class="personal-info__spec">Front-end Developer</span>
+          <span class="personal-info__geo">Moscow, Russia</span>
+        </div>
+
+        <div class="personal-info__contacts">
+          <a href="https://github.com/nbrylevv"
+             title="GitHub link"
+             class="personal-info__contact-link link">
+            <img src="icons/github.png" class="link-icon">
+            <span class="link-content">Github</span>
+            <span class="link-content _only-print">http://github.io/nbrylevv</span>
+          </a>
+        </div>
+      </section>
+      <section class="cv__section">
+        <h2 class="title cv__title">Education</h2>
+        <h2 class="title cv__title">Professional Experience</h2>
+        <h2 class="title cv__title">Technical summary</h2>
+      </section>
+    </section>
+    <section class="homepage__section projects">
+      <section class="projects__section">
+        <h2 class="title projects__title">Projects</h2>
+        <a class="projects__entity link"
+           title="Project, username-generator"
+           href="./projects/username-generator"
+           target="_blank">
+          <span class="link-content">username-generator</span>
+          <span class="link-content _only-print">http://nbrylevv.github.io/projects/username-generator</span>
+        </a>
+      </section>
+      <section class="projects__section">
+        <h2 class="title projects__title">Homepages/Landings</h2>
+        <a class="projects__entity link"
+           title="Old homepage, 2016"
+           href="./xxxx2016/index.html"
+           target="_blank">
+          <span class="link-content">xxxx2016</span>
+          <span class="link-content _only-print">http://nbrylevv.github.io/homepages/xxxx2016</span>
+        </a>
+        <a class="projects__entity link"
+           title="Old homepage, 2017"
+           href="./xxxx2017/index.html"
+           target="_blank">
+          <span class="link-content">xxxx2017</span>
+          <span class="link-content _only-print">http://nbrylevv.github.io/homepages/xxxx2017</span>
+        </a>
+        <a class="projects__entity link"
+           title="Old homepage, 03/14/2020"
+           href="./03142020/index.html"
+           target="_blank">
+          <span class="link-content">03142020</span>
+          <span class="link-content _only-print">http://nbrylevv.github.io/homepages/03142020</span>
+        </a>
+      </section>
+    </section>
   </div>
 </body>
 </html>
