Обкатка React App

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
 
   <!-- That's pretty crazy: ON -->
-  <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="./favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="public/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="public/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="public/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="public/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="public/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="public/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="public/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="public/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="public/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="public/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="public/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="public/favicon/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="./favicon/ms-icon-144x144.png">
   <!-- That's pretty crazy: OFF -->
@@ -43,7 +43,7 @@
     <section class="homepage__section cv">
       <section class="cv__section personal-info">
         <div class="personal-info__main">
-          <img src="main-character.jpg" alt="Nikita Brylev" class="personal-info__photo">
+          <img src="public/images/main-character.jpg" alt="Nikita Brylev" class="personal-info__photo">
           <span class="personal-info__name">Nikita Brylev</span>
           <span class="personal-info__spec">Front-end Developer</span>
           <span class="personal-info__geo">Moscow, Russia</span>
@@ -53,7 +53,7 @@
           <a href="https://github.com/nbrylevv"
              title="GitHub link"
              class="personal-info__contact-link link">
-            <img src="icons/github.png" class="link-icon">
+            <img src="public/icons/github.png" class="link-icon">
             <span class="link-content">Github</span>
             <span class="link-content _only-print">http://github.io/nbrylevv</span>
           </a>
