Added built Breaktify web application

--- a/breaktify/index.html
+++ b/breaktify/index.html
@@ -6,10 +6,10 @@
 
 	<title>Breaktify</title>
 
-	<link rel="icon" type="image/png" href="favicon/favicon-timer.ico" id="document-favicon">
-	<link rel="stylesheet" href="/build/bundle.css">
+	<link rel="icon" type="image/png" href="./favicon/favicon-timer.ico" id="document-favicon">
+	<link rel="stylesheet" href="./build/bundle.css">
 
-	<script defer src="/build/bundle.js"></script>
+	<script defer src="./build/bundle.js"></script>
 </head>
 
 <body>
