Moved Projects dir

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
     <div class="projects__section">
       <span class="projects__label">Repositories</span>
       <a class="project"
-         href="./projects/username-generator"
-         target="_blank">username-generator</a>
+         href="./username-generator"
+         target="_blank">Username Generator</a>
+      <a class="project"
+	 href="./breaktify"
+	 target="_blank">Breaktify</a>
     </div>
     <div class="projects__section">
       <span class="projects__label">Previous homepages</span>
