Updated build of Breaktify

--- a/breaktify/index.html
+++ b/breaktify/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<title>Breaktify</title>
+	<title>Breaktify! - Don't Forget About Breaks</title>
 
-	<link rel="icon" type="image/png" href="./favicon/favicon-timer.ico" id="document-favicon">
-	<link rel="stylesheet" href="./build/bundle.css">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/favicon-192x192.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="icon" type="image/png" href="/favicon.ico">
+	<meta name="theme-color" content="#ffffff">
 
-	<script defer src="./build/bundle.js"></script>
+	<meta name="description" content="Breaktify! is a web application which reminds you periodically to take a break">
+	<meta property="og:title" content="Breaktify! - Don't Forget About Breaks">
+	<meta property="og:description" content="Breaktify! is a web application which reminds you periodically to take a break">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://nbrylevv.github.io">
+	<meta property="og:image" content="https://raw.githubusercontent.com/nbrylevv/breaktify-web-app/master/screenshot.png">
+	<meta property="og:image" content="http://nbrylevv.github.io/breaktify/images/favicon.png">
+	<meta property="og:image" content="http://nbrylevv.github.io/main-character.jpg">
+
+	<link rel="stylesheet" href="/app.css">
+	<script defer src="/app.js"></script>
 </head>
 
 <body>
