--- a/breaktify/index.html
+++ b/breaktify/index.html
@@ -6,11 +6,11 @@
 
 	<title>Breaktify! - Don't Forget About Breaks</title>
 
-	<link rel="icon" type="image/png" sizes="192x192"  href="/favicon-192x192.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="icon" type="image/png" href="/favicon.ico">
+	<link rel="icon" type="image/png" sizes="192x192"  href="favicon-192x192.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="icon" type="image/png" href="favicon.ico">
 	<meta name="theme-color" content="#ffffff">
 
 	<meta name="description" content="Breaktify! is a web application which reminds you periodically to take a break">
@@ -22,8 +22,8 @@
 	<meta property="og:image" content="http://nbrylevv.github.io/breaktify/images/favicon.png">
 	<meta property="og:image" content="http://nbrylevv.github.io/main-character.jpg">
 
-	<link rel="stylesheet" href="/app.css">
-	<script defer src="/app.js"></script>
+	<link rel="stylesheet" href="app.css">
+	<script defer src="app.js"></script>
 </head>
 
 <body>
