feature: added Google Analytics

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
   <meta property="og:url" content="http://nbrylevv.github.io">
   <meta property="og:image" content="http://nbrylevv.github.io/main-character.jpg">
   <meta property="og:image" content="http://nbrylevv.github.io/main-photo.jpg">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LDBM1YSJPR"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LDBM1YSJPR');
+  </script>
 </head>
 <body>
   <div class="content">
