--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
       <div class="organization">
         @<a class="organization__link"
             href="https://spacetab.io"
-            target="_blank">
+            target="_blank"
+            onclick="gtag(
+               'event',
+               'click',
+               {
+                 'event_category': 'company',
+                 'event_label': 'spacetab.io',
+                 'value': 1,
+               })">
         spacetab.io
       </a>
       </div>
@@ -65,7 +73,15 @@
         <div class="pet-projects__list">
           <a class="pet-project"
              href="./breaktify"
-             target="_blank">
+             target="_blank"
+             onclick="gtag(
+               'event',
+               'click',
+               {
+                 'event_category': 'pet_project',
+                 'event_label': 'Breaktify',
+                 'value': 1,
+               })">
             <img src="./assets/images/breaktify.png"
                  alt="Breaktify example"
                  class="pet-project__image">
@@ -75,7 +91,15 @@
           </a>
           <a class="pet-project"
              href="./username-generator"
-             target="_blank">
+             target="_blank"
+             onclick="gtag(
+               'event',
+               'click',
+               {
+                 'event_category': 'pet_project',
+                 'event_label': 'Username Generator',
+                 'value': 1,
+               })">
             <img src="./assets/images/username-generator.png"
                  alt="Username Generator example"
                  class="pet-project__image">
