new demo: added demo task for Ctrl-Hack

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </header>
 <section class="section specific-info">
   <div class="section__content">
-    <div class="now-at-company">
+    <div class="now-at-company" style="display: none;">
       Now at
       <a class="external-text-link"
          href="https://spacetab.io"
