--- a/demo/ctrl-hack/index.html
+++ b/demo/ctrl-hack/index.html
@@ -6,18 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" href="/favicon.ico">
-  <title>ctrl-hack-demo1</title>
+  <title>ctrl-hack-demo</title>
   <link href="css/app.58eec493.css" rel="preload" as="style">
-  <link href="js/app.696bfa54.js" rel="preload" as="script">
+  <link href="js/app.03839cbd.js" rel="preload" as="script">
   <link href="js/chunk-vendors.6f70e335.js" rel="preload" as="script">
   <link href="css/app.58eec493.css" rel="stylesheet">
 </head>
 
-<body><noscript><strong>We're sorry but ctrl-hack-demo1 doesn't work properly without JavaScript enabled. Please enable
+<body><noscript><strong>We're sorry but ctrl-hack-demo doesn't work properly without JavaScript enabled. Please enable
       it to continue.</strong></noscript>
   <div id="app"></div>
   <script src="js/chunk-vendors.6f70e335.js"></script>
-  <script src="js/app.696bfa54.js"></script>
+  <script src="js/app.03839cbd.js"></script>
 </body>
 
 </html>
